Clean repo and apply proper gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
+# =============================
+# Dependencies
+# =============================
+node_modules/
+
+# =============================
+# Build Output
+# =============================
+dist/
+build/
+
+# =============================
+# Environment Files
+# =============================
+.env
+.env.*
+!.env.example
+
+# =============================
+# Replit / Local State
+# =============================
+.local/
+.upm/
+.replit
+
+# =============================
+# Zips / Archives
+# =============================
+*.zip
 *.tar.gz
+
+# =============================
+# Logs
+# =============================
+*.log
+
+# =============================
+# OS Files
+# =============================
+.DS_Store
+
+# =============================
+# Server Public (if generated)
+# =============================
+server/public
